changed some imports, it is now possible to load GameEngine, read initial values from config file and call the create player method in GameEngine without errors

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,3 @@
-# -*- coding: utf-8 -*-
-"""
-Created on Sat Mar 26 22:15:17 2016
-
-@author: yihan
-"""
-
-
 # CONFIG FILE
 [Black Jack]
 
@@ -15,7 +7,7 @@ MinBet = 20
 Decks = 5
 RoundShuffle = 0
 DealerTakeLimit = [17,20]
-
+StartMoney = 1000
 
 
 
