--- a/config.ini
+++ b/config.ini
@@ -6,7 +6,8 @@ MaxBet = 70
 MinBet = 20
 Decks = 5
 RoundShuffle = 0
-DealerTakeLimit = [17,20]
+DealerTakeLowerLimit = 17
+DealerTakeUpperLimit = 20
 StartMoney = 1000
 
 
